# factorio-mod-manager-cli

./: Cargo.toml  README.md  config.example.toml  mise.toml
.github/workflows/: release.yml
src/: app.rs  cli.rs  config.rs  domain.rs  error.rs  factorio.rs  lib.rs  main.rs  portal_api.rs  ui.rs
src/commands/: config_wizard.rs  doctor.rs  install.rs  list.rs  mod.rs  preset.rs  remove.rs  update.rs
tests/: domain_tests.rs  factorio_tests.rs  portal_api_tests.rs
